--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/country.png" />
+    <link rel="icon" type="image/jpg" href="/flight_icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Travel</title>
+    <title>RegioExplorer - Explore the world one country at a time.</title>
   </head>
   <body>
     <div id="root"></div>
