--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/flight_icon.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RegioExplorer - Explore the world one country at a time.</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Title & Description -->
+  <title>RegioExplorer - Explore the world one country at a time.</title>
+  <meta name="description"
+    content="Explore countries from all around the world. Filter by region, search by name, and dive into detailed information using this beautiful React app." />
+  <!-- Favicon -->
+  <link rel="icon" type="image/jpg" href="/flight_icon.jpg" />
+
+  <!-- Open Graph Meta Tags (for social sharing previews) -->
+  <meta property="og:title" content="Regio Explorer – Discover Countries Around the Globe" />
+  <meta property="og:description"
+    content="Search and explore detailed info on every country including population, region, and maps – all in one clean app." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://regio-explorer.netlify.app/" />
+  <meta property="og:image" content="https://regio-explorer.netlify.app/og-preview.png" />
+  <meta property="og:site_name" content="Regio Explorer" />
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Regio Explorer – Discover Countries Around the Globe" />
+  <meta name="twitter:description"
+    content="Search and explore data about countries worldwide – with maps, flags, and population stats." />
+  <meta name="twitter:image" content="https://regio-explorer.netlify.app/og-preview.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
